# ofd-validator

./: .gitignore  Cargo.toml  MIGRATION.md  README.md  bump.sh  pyproject.toml
.github/workflows/: build-binary.yml  build-npm.yml  build-wheels.yml  test-publish.yml  test-python-bindings.yml
crates/ofd-validator-core/: Cargo.toml
crates/ofd-validator-core/src/: lib.rs  orchestrator.rs  schema_cache.rs  types.rs  util.rs
crates/ofd-validator-core/src/validators/: folder_name.rs  gtin.rs  json_validator.rs  logo_validator.rs  missing_files.rs  mod.rs  store_id.rs
crates/ofd-validator-js/: Cargo.toml  package-lock.json  package.json
crates/ofd-validator-js/aarch64-apple-darwin/npm/darwin-x64/: package.json
crates/ofd-validator-js/aarch64-apple-darwin/npm/linux-x64-gnu/: README.md  package.json
crates/ofd-validator-js/aarch64-apple-darwin/npm/win32-x64-msvc/: package.json
crates/ofd-validator-js/aarch64-unknown-linux-gnu/npm/linux-arm64-gnu/: README.md  package.json
crates/ofd-validator-js/aarch64-unknown-linux-gnu/npm/linux-x64-gnu/: package.json
crates/ofd-validator-js/aarch64-unknown-linux-gnu/npm/win32-x64-msvc/: package.json
crates/ofd-validator-js/npm/darwin-arm64/: README.md  package.json
crates/ofd-validator-js/npm/darwin-x64/: README.md  package.json
crates/ofd-validator-js/npm/linux-arm64-gnu/: README.md  package.json
crates/ofd-validator-js/npm/linux-x64-gnu/: README.md  package.json
crates/ofd-validator-js/npm/win32-x64-msvc/: README.md  package.json
crates/ofd-validator-js/src/: lib.rs
crates/ofd-validator-js/x86_64-apple-darwin/npm/darwin-x64/: README.md
crates/ofd-validator-js/x86_64-apple-darwin/npm/linux-arm64-gnu/: package.json
crates/ofd-validator-js/x86_64-pc-windows-msvc/npm/darwin-x64/: package.json
crates/ofd-validator-js/x86_64-pc-windows-msvc/npm/linux-x64-gnu/: package.json
crates/ofd-validator-js/x86_64-pc-windows-msvc/npm/win32-x64-msvc/: README.md
crates/ofd-validator-js/x86_64-unknown-linux-gnu/npm/win32-x64-msvc/: package.json
crates/ofd-validator-python/: Cargo.toml
crates/ofd-validator-python/src/: lib.rs  orchestrator.rs  types.rs  util.rs  validators.rs
docs/: js-api.md
src/: lib.rs  main.rs  orchestrator.rs  python.rs  schema_cache.rs  types.rs  util.rs
src/utils/: helpers.rs  image_fast.rs  mod.rs  parallel.rs  schema_cache.rs
src/validators/: folder.rs  folder_name.rs  gtin.rs  json.rs  json_validator.rs  logo.rs  logo_validator.rs  missing.rs  missing_files.rs  mod.rs  store_id.rs
