[package]
name = "ofd-validator"
version = "0.1.0"
edition = "2021"
authors = ["Open Filament Collective"]
license = "MIT"
description = "High-performance validation library for the Open Filament Database"
repository = "https://github.com/OpenFilamentCollective/ofd-validator"
keywords = ["validation", "filament", "3d-printing", "database"]
categories = ["command-line-utilities", "development-tools"]

[lib]
name = "ofd_validator"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.25", features = ["extension-module"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
jsonschema = "0.28"
regex = "1"
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
rayon = "1"
walkdir = "2"

[dev-dependencies]
tempfile = "3"
