[build-system]
requires = ["maturin>=1.5,<2.0"]
build-backend = "maturin"

[project]
name = "ofd-validator"
version = "0.1.0"
description = "High-performance validation library for the Open Filament Database"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
keywords = ["validation", "filament", "3d-printing", "database", "rust", "pyo3"]
authors = [
    { name = "Open Filament Collective" }
]
maintainers = [
    { name = "Open Filament Collective" }
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Rust",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Quality Assurance",
]

[project.urls]
Homepage = "https://github.com/OpenFilamentCollective/open-filament-database"
Repository = "https://github.com/OpenFilamentCollective/open-filament-database"
Issues = "https://github.com/OpenFilamentCollective/open-filament-database/issues"

[tool.maturin]
features = ["python"]
module-name = "ofd_validator"
strip = true
