[package]
name = "ofd-validator-core"
version = "0.5.1"
edition = "2021"
authors = ["Open Filament Collective"]
license = "MIT"
description = "Core validation library for the Open Filament Database"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
jsonschema = "0.28"
regex = "1"
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
rayon = "1"
walkdir = { version = "2", optional = true }

[features]
default = ["filesystem"]
filesystem = ["walkdir"]
