[package]
name = "ofd-validator-js"
version = "0.2.1"
edition = "2021"
authors = ["Open Filament Collective"]
license = "MIT"
description = "Node.js bindings for the OFD validation library"

[lib]
crate-type = ["cdylib"]

[dependencies]
ofd-validator-core = { path = "../ofd-validator-core", features = ["filesystem"] }
napi = { version = "2", default-features = false, features = ["napi8", "serde-json"] }
napi-derive = "2"
serde_json = "1"
walkdir = "2"
rayon = "1"

[build-dependencies]
napi-build = "2"
