[package]
name = "ofd-validator-python"
version = "0.4.0"
edition = "2021"
authors = ["Open Filament Collective"]
license = "MIT"
description = "Python bindings for the OFD validation library"

[lib]
name = "ofd_validator"
crate-type = ["cdylib"]

[dependencies]
ofd-validator-core = { path = "../ofd-validator-core", features = ["filesystem"] }
pyo3 = { version = "0.25", features = ["extension-module"] }
serde_json = "1"
walkdir = "2"
rayon = "1"
